--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: November 29, 2024.
+% date: December 8, 2024.
 
 % Copyright © 2024 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -197,12 +197,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2024 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2024-11-30},
+  pdfdate={2024-12-08},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2024-11-30}
+\date{2024-12-08}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -948,7 +948,7 @@ for ps and pn are the button that the pedestrian presses
 to cross.
 
 The driving public is accustomed to signal faces which control
-adjacent through lanes operate together: they would think it strange
+adjacent through lanes operating together: they would think it strange
 if signal face B turned red while C remained green.  We accomodate this
 by connecting the sensors for lanes B and C to both signal face B
 and C, and likewise for F and G.
@@ -1224,6 +1224,7 @@ is approaching it instead sets the Preempt Green toggle, as follows:
   \hline South & ps, D, E, pn, F, G, H, J & A, B, C \\
   \hline East & A, ps, B, C, E, pn, F, G, H, J & D \\
   \hline North & A, ps, B, C, D, pn, H, J & E, F, G \\
+  \hline
 \end{longtable}
 
 \section{Manual Control}
