--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: December 21, 2024.
+% date: December 22, 2024.
 
 % Copyright © 2024 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -32,7 +32,6 @@
 %\usepackage{flexisym}
 \usepackage{tikz}
 \usetikzlibrary {babel}
-\usepackage{svg}
 
 % Font choices: pick one.
 
@@ -197,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2024 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2024-12-21},
+  pdfdate={2024-12-22},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2024-12-21}
+\date{2024-12-22}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -297,13 +296,13 @@ whether it is safe to walk, not safe to walk, or the walk time is about to end.
 
 \begin{figure}[H]
   \fcapside
-           {\includesvg{MUTCD_Ped_Signal_-_Walk.svg}}
+           {\includegraphics{MUTCD_Ped_Signal_-_Walk}}
            {\caption{Proceed into the intersection}}
 \end{figure}
 
 \begin{figure}[H]
   \fcapside
-           {\includesvg{MUTCD_Ped_Signal_-_Hand_with_timer.svg}}
+           {\includegraphics{MUTCD_Ped_Signal_-_Hand_with_timer}}
            {\caption{The walk condition will end in the indicated
                number of seconds.  Do not enter the intersection
                unless you can cross before the condition ends.}}
@@ -311,7 +310,7 @@ whether it is safe to walk, not safe to walk, or the walk time is about to end.
 
 \begin{figure}[H]
   \fcapside
-           {\includesvg{MUTCD_Ped_Signal_-_Steady_hand.svg}}
+           {\includegraphics{MUTCD_Ped_Signal_-_Steady_hand}}
            {\caption{Do not enter the intersection.}}
 \end{figure}
 
@@ -872,7 +871,9 @@ Now we try to let some signal faces turn green out of order, being
 careful not to allow a signal face to be starved out of any
 opportunity to turn green.
 
-Go through the list of signal faces that are requesting to turn green
+Provided the oldest signal face on the list of signal faces
+waiting to requesting to turn green has not been waiting too long,
+go through the list of signal faces that are requesting to turn green
 starting with the oldest.  For each such signal face that does not
 conflict with any of the signal faces already in the set of signal
 faces allowed to turn green, and is not in the set of signal faces
