--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: December 22, 2024.
+% date: December 24, 2024.
 
 % Copyright © 2024 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2024 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2024-12-22},
+  pdfdate={2024-12-24},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2024-12-22}
+\date{2024-12-24}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -1420,9 +1420,7 @@ when it appears in the simulation and removed when it leaves.}
 \item{There is a dictionary named travel paths.  Its entries are the
   names of the travel paths and its values are tuples.  Each tuple
   is a list of milestones.  A milestone is a tuple with two elements:
-  the name of the lane and the distance from the stop line.
-  For example, a1 is ((``B'', 528), (``B'', 450), (``A'', 450), (``A'', 0),
-  (``intersection'', 12), (``intersecton'', 0), (``1'', 0), (``1'', 528)).}
+  the name of the lane and the distance from the stop line.}
 \end{itemize}
 
 \subsection{Dimensions}
