vehicles and pedestrians work

--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1152,12 +1152,12 @@ to clear.
 \subsection{Pedestrian and Near Left Turner}
 
 Building upon the previous two scenarios, suppose after the pedestrian
-has pushed his button and begun to cross a vehicle arrives at lane A.
+has pushed his button and begun to cross, a vehicle arrives at lane A.
 Signal face A will be be given permission to turn green right away, since no
 other signal faces are waiting to turn green.  It will then request
 that signal faces ps, D, H and J turn red.  Signal faces D and J
 will already be clear because signal face ps is green, and signal face
-has never been green, so signal face A is waiting only for signal face ps.
+H has never been green, so signal face A is waiting only for signal face ps.
 
 When signal face ps is clear signal face A will turn green because
 signal faces F and G are clear due to signal face ps, so the left turn
