--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: December 24, 2024.
+% date: December 25, 2024.
 
 % Copyright © 2024 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2024 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2024-12-24},
+  pdfdate={2024-12-25},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2024-12-24}
+\date{2024-12-25}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -1344,85 +1344,6 @@ traffic is proceeding through the intersection, so we can see how
 traffic flows.  For context, the signal faces also print information
 about the color of each signal face when it changes.
 
-\subsection{Data Structures}
-
-\begin{itemize}
-\item{Each traffic element is represented by a dictionary, created when it is
-introduced into the simulation.  It has the following entries:}
-
-\begin{itemize}
-
-\item{The name is a unique identifier for the traffic element.}
-\item{Type is car, truck, or pedestrian.}
-\item{Entrance lane is the lane the vehicle or pedestrian
-  appears on.  For vehicles that is B, C, D, F, G, or H.  For pedestrians
-  it is ps or pn.}
-\item{Exit lane is the lane the vehicle will leave on: 1, 2, 3, 4, 5, or 6.
-  For pedestrians it is blank, meaning the pedestrian leaves the simulation.}
-\item{Current lane is the lane the traffic element currently occupies.
-  For vehicles
-  approaching the intersection that will be the same as the entrance lane,
-  except vehicles entering in lane B and exiting on lane 1, 2, or 6 rather
-  than 5 will switch to lane A when they get close to the intersection
-  and similarly vehicles entering in lane F and exiting on lane 3, 4, or 5
-  rather than 2 will switch to lane E when they get close to the
-  intersection.  For traffic elements that have reached the intersection this
-  is intersection.  For pedestrians waiting for a green signal
-  this is the entrance lane.}
-\item{List of Milestones is a reference to the list provided by
-  the travel path.}
-\item{Current Position in the List of Milestones starts at 0.}
-\item{Distance to next milestone is the distance the traffic element
-  must travel
-  to reach the next place it is supposed to be.  For vehicles in lanes
-  A, B, C, D, E, F, G, H, or J this is the distance to the intersection.
-  For pedestrians not in the intersection this is 0.
-  For vehicles in the intersection this is the distance to their exit
-  lane.  For vehicles in lanes 1, 2, 3, 4, 5, or 6 this is the distance
-  to the limit of the simulation.
-  When this value goes to zero a traffic element
-  in lane A, ps, B, C, D, E, pn, F, G, H, or J enters the intersection
-  unless it is facing a red light,
-  a vehicle
-  in the intersection enters its exit lane, a pedestrian in the intersection
-  and a vehicle in lanes 1, 2, 3, 4, 5, or 6 vanishes from the simulation.
-  This is implemented by increasing Current Position in the List of Milestones
-  by 1 and fetching the next milestone.  If there is none the traffic
-  element vanishes.}
-\item{Desired speed is the speed at which the traffic element will travel if
-  it is unconstrained.}
-\item{Current speed is the speed the traffic elememt is actually moving towards
-  its next milestone.  This will be the desired speed unless something
-  limits its speed:}
-  \begin{itemize}
-  \item{The speed limit of the road.  Lanes 1, 2, B, C, 4, 5, F, and G are
-    limited to 45 miles per hour.  Lanes A, 3, D, E, 6, H, and J are limited
-    to 25 miles per hour.  Pedestrian crossings are limited to walking speed:
-    3.5 feet per second.}
-  \item{If there is a vehicle just ahead of this one, this vehicle
-    is limited to the speed of that vehicle.}
-  \item{If this traffic element is 0 distance from the intersection on lanes
-    A, ps, B, C, D, E, pn, F, G, H, or J and the corresponding signal face
-    is red, the speed of this traffic element is 0.}
-  \end{itemize}
-\item{Length is the length of the vehicle.  If any part of the vehicle
-  overlaps any part of a sensor, the sensor is triggered.  Advance sensors
-  are 6 feet long; stop-line sensors are 20 feet long.  Sensors have
-  positions and lengths.}
-\end{itemize}
-
-\item{There is a dictionary named traffic elements whose entries
-are the names of the traffic elements and whose values are the dictionaries
-that represent the traffic elements, described above.
-A traffic element is entered into the traffic elements dictionary
-when it appears in the simulation and removed when it leaves.}
-
-\item{There is a dictionary named travel paths.  Its entries are the
-  names of the travel paths and its values are tuples.  Each tuple
-  is a list of milestones.  A milestone is a tuple with two elements:
-  the name of the lane and the distance from the stop line.}
-\end{itemize}
-
 \subsection{Dimensions}
 
 A realistic simulation must be based on the sizes and speeds of real objects.
@@ -1439,9 +1360,13 @@ A realistic simulation must be based on the sizes and speeds of real objects.
 \item[Truck Size]{Trucks are 40 feet in length.}
 \item[Intersection]{The example intersection is 36 feet from north to south
   and 65.5 feet from east to west.}
+\item[speed limits]{The speed limit on lanes B, C, D, F, and G is
+  45 miles per hour; on lanes A, D, E, H, and J 25 miles per hour,
+  on ps and pn, 3.5 feet per second.}
 \item[Traffic Approaching Sensors]{The Traffic Approaching sensors are placed
   365 feet behind the stop line to give the vehicle operator time to stop
-  if the light turns yellow just as the vehicle reaches that point.}
+  if the light turns yellow just as the vehicle reaches that point.
+Only lanes B, C, F, and G have these sensors.}
 \item[Minimum Green]{The minomum green interval for lanes B, C, F, and G
   is 12 seconds; for lanes D, H, and J 7 seconds; for lanes A and E 5 seconds;
   for lanes ps and pn 6 seconds.}
