Start work on turning bitmap images into svg

--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -235,7 +235,7 @@ A signal face with three lamps looks like this:
 
 \begin{figure}[H]
   \fcapside[\FBwidth]
-           {\includegraphics*[bb=1.5in 2.875in 2.5in 4.125in]{fig4d\_02}}
+           {\includegraphics*{traffic_signal_3_lamps}}
            {\caption{steady circular red, yellow, and
                green}\label{fig:three_A}}
 \end{figure}
