--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: December 25, 2024.
+% date: December 27, 2024.
 
 % Copyright © 2024 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2024 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2024-12-25},
+  pdfdate={2024-12-27},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2024-12-25}
+\date{2024-12-27}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -235,7 +235,7 @@ A signal face with three lamps looks like this:
 
 \begin{figure}[H]
   \fcapside[\FBwidth]
-           {\includegraphics*{traffic_signal_3_lamps}}
+           {\includegraphics*{signal_ccc}}
            {\caption{steady circular red, yellow, and
                green}\label{fig:three_A}}
 \end{figure}
