--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: December 27, 2024.
+% date: December 29, 2024.
 
 % Copyright © 2024 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2024 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2024-12-27},
+  pdfdate={2024-12-29},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2024-12-27}
+\date{2024-12-29}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -816,7 +816,7 @@ summarizes the most significant states, substates and
 transitions of the finite state machines:
 
 \begin{figure}[htb]
-  {\includegraphics{traffic_control_signals_state_diagram}}
+  {\includegraphics{state_diagram}}
   {\caption{State Diagram Summary}\label{fig:State_Diagram_Summary}}
 \end{figure}
 
