Change log output to table outut

--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1051,9 +1051,9 @@ We will call this situation, with signal faces B, C, F, and G green
 and the others red and clear the idle condition, since it will persist
 in the absence of traffic.
 
-This event log details the progression from power on to the idle state.
+This table of events details the progression from power on to the idle state.
 
-\input{idle_log.tex}
+\input{idle_table.tex}
 
 \subsection{Pedestrian Crossing on South Side of Intersection}
 A pedestrian who wishes to cross the boulevard on the south side
@@ -1102,7 +1102,7 @@ in the Idle scenario to turn green.
 
 The following describes the events in detail.
 
-\input{pedestrian_log.tex}
+\input{pedestrian_table.tex}
 
 \subsection{Left Turn}
 
@@ -1147,7 +1147,7 @@ The following are the events that take place assuming there is only
 one vehicle that turns left, but it must wait for oncoming traffic
 to clear.
 
-\input{left_turn_log.tex}
+\input{left_turn_table.tex}
 
 \subsection{Pedestrian and Near Left Turner}
 
@@ -1169,10 +1169,10 @@ will turn green without waiting for singla face A to clear, since
 they do not conflict.  When signal face A is clear signal faces
 F and G will turn green, getting us back to the idle state.
 
-Here is the log of this scenario, with less detail than previous
-logs.
+Here are the events of this scenario, with less detail than
+previously.
 
-\input{pedestrian_and_left_turn_log.tex}
+\input{pedestrian_and_left_turn_table.tex}
 
 \subsection{Multiple Arrivals}
 
@@ -1213,10 +1213,9 @@ To summarize, if traffic arrives in quick succession on signal faces
 A, ps, D, E, pn, H and J, traffic will flow through signal face
 A and E, then through ps and pn, then H and J, and finally D.
 
-The following is an event log from this scenario, with only the most
-important events shows.
+The following table shows the most important events in this screnrioario.
 
-\input{multiple_log.tex}
+\input{multiple_table.tex}
 
 \subsection{Emergency Vehicle}
 
