Use svg instead of gif for diagrams

--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -245,7 +245,7 @@ green lamp might be replaced by a lamp with an upward arrow.
 
 \begin{figure}[H]
   \fcapside[\FBwidth]
-           {\includegraphics*[bb=2.75in 2.875in 3.75in 4.125in]{fig4d\_02}}
+           {\includegraphics*{signal_ccu}}
            {\caption{steady circular red, circular yellow, up arrow
                green}\label{fig:three_B}}
 \end{figure}
@@ -255,7 +255,7 @@ are replaced by right arrows.
 
 \begin{figure}[H]
   \fcapside[\FBwidth]
-           {\includegraphics*[bb=0.125in 0.25in 1.125in 1.75in]{fig4d\_17}}
+           {\includegraphics*{signal_rrr}}
            {\caption{steady right arrow red, yellow, and
                green}\label{fig:three_C}}
 \end{figure}
@@ -263,11 +263,11 @@ are replaced by right arrows.
 \subsubsection{Signal Faces with Four Lamps}
 
 For lanes that permit turning, arrow lamps are added to the signal face.
-For example, a lane that allowed a left turn looks like this:
+For example, a lane that allowes a left turn looks like this:
 
 \begin{figure}[H]
   \fcapside[\FBwidth]
-           {\includegraphics*[bb=1.5in 0.75in 2.5in 2.25in]{fig4d\_09}}
+           {\includegraphics*{signal_cccl}}
            {\caption{steady circular red, circular yellow, circular green,
                left arrow green}\label{fig:four_A}}
 \end{figure}
@@ -280,7 +280,7 @@ when the left turn is protected.
 
 \begin{figure}[H]
   \fcapside[\FBwidth]
-           {\includegraphics*[bb=2.75in 0in 3.75in 1.5in]{fig4d\_12}}
+           {\includegraphics*{signal_llll}}
            {\caption{steady left arrow red, steady left arrow yellow, flashing
                left arrow yellow, steady left arrow green}\label{four_B}}
 \end{figure}
